--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <img src="./media/logo.png" alt="logo" id="logo">
             <div>Footly</div>
         </div>
-        <div class="credit">Photo by <a href="https://unsplash.com/@markusspiske" target="_blank" noreferer
-                noopener>Markus Spiske</a> on <a href="https://unsplash.com/" target="_blank" noreferer
-                noopener>Unsplash</a></div>
+        <div class="credit">Photo by <a href="https://unsplash.com/@markusspiske" target="_blank" rel="noreferer
+                noopener">Markus Spiske</a> on <a href="https://unsplash.com/" target="_blank" rel="noreferer
+                noopener">Unsplash</a></div>
     </div>
     <div class="signupdiv">
         <div class="welcomediv">
